# pdf-cli-tools

./: .gitignore  README.md  merge.py  pdf_tools.py  pdfcli.py  pyproject.toml  reverse.py  rotate.py  utils.py
pdf_tools/: __main__.py  cli.py  delete.py  merge.py  reverse.py  rotate.py
pdfwiz/: __main__.py  cli.py  delete.py  merge.py  reverse.py  rotate.py  utils.py
