[build-system]
requires = ["setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "pdfwiz"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "pikepdf==9.10.0",
]

[project.scripts]
pdfwiz = "pdfwiz.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_tools"]
exclude = ["test_pdfs"]